HTML / CSS multiple layout issues

--- a/app/assets/stylesheets/_yomobi.footer.sass
+++ b/app/assets/stylesheets/_yomobi.footer.sass
@@ -11,13 +11,17 @@
   +hidden-320
   +margin-leader(0.5)
   ul
-    float: right
-    width: 51%
+    letter-spacing: -.31em
+    word-spacing: -.43em
+    text-align: right
   li
-    float: left
+    //float: left
+    display: inline-block
     font-size: 12px
     font-family: $sans-serif
-    padding: 0 2%
+    padding: 0 1%
+    letter-spacing: normal
+    word-spacing: normal
     a,
     .a
       display: block
