--- a/app/assets/stylesheets/_yomobi.main-menu.sass
+++ b/app/assets/stylesheets/_yomobi.main-menu.sass
@@ -87,11 +87,15 @@
     & > .main-menu
       & > .content
         & > ul
-          float: right
-          width: 53%
+          text-align: right
+          letter-spacing: -.31em
+          word-spacing: -.43em
           & > li
+            float: none
+            letter-spacing: normal
+            word-spacing: normal
             font-size: 12px
-            padding: 0 2%
-            
+            padding: 0 1%
+            display: inline-block
 
 
