--- a/app/assets/stylesheets/yomobi.ie7.sass
+++ b/app/assets/stylesheets/yomobi.ie7.sass
@@ -13,12 +13,6 @@
           &.active-trail
             background: #5a8a52
 
-
-.secondary-menu
-  ul
-    float: right
-    width: 52%
-
 .main-menu
   a
     color: #ffffff
