--- a/app/assets/stylesheets/yomobi.ie8.sass
+++ b/app/assets/stylesheets/yomobi.ie8.sass
@@ -11,9 +11,3 @@
             background: #5a8a52
           &.active-trail
             background: #5a8a52
-
-
-.secondary-menu
-  ul
-    float: right
-    width: 52%
